verif/test/deca/context/invalid/float-verif.res
src/test/deca/context/invalid/float.deca:12:8: Cannot assign expression of type 'float' to a variable of type 'int'
